--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
     background-color: gainsboro;
+    background-image: url(hatterkep.jpg);
+    background-attachment: fixed;
 }
 header{
     height: 50px;
